Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="menu">
 
-<a href="home.html"style="float:left;margin-left:16%;">
+<a href="index.html"style="float:left;margin-left:16%;">
 	<img src="img/home.png">
 	<br>
 <p style="font-size: 25px;">Accueil</p>
