--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
-<meta charset="utf-8"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
-<meta name="Bienvenue"/>
+<meta charset="utf-8"><meta name="Bienvenue"/>
  <title>Bienvenue</title> 
 <link href="css/styleadmin.css" rel="stylesheet">
 
