--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
+<meta charset="utf-8">
+<meta name="Bienvenue"/>
 <meta name="viewport" content="width=device-width, minimal-ui">
  <title>Bienvenue</title> 
 <link href="css/styleadmin.css" rel="stylesheet">
