--- a/photo.html
+++ b/photo.html
@@ -22,7 +22,7 @@
 		<img src="#" alt="" id="camera--output" /> 
 		
 		
- <a href="#" onclick="myFunction()"><div id="myBtn"><img src="img/2.png" style="height: 40%; margin-top: -20%;" id="camera--trigger"/></div></a>
+ <a href="#" onclick="myFunction()"><div id="myBtn"><img src="img/2.png" style=" width: 80%;margin-top: -50%;" id="camera--trigger"/></div></a>
 
 <script>
 function myFunction() {
