--- a/photo.html
+++ b/photo.html
@@ -22,7 +22,7 @@
 		<img src="#" alt="" id="camera--output" /> 
 		
 		
- <a href="#" onclick="myFunction()"><div id="myBtn"><img src="img/2.png" style="margin-top:0; height:60%;" id="camera--trigger"/></div></a>
+ <a href="#" onclick="myFunction()"><div id="myBtn"><img src="img/buttphoto.png" id="camera--trigger"/></div></a>
 
 <script>
 function myFunction() {
