--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 }
 
 #myVideo {
+background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: fixed;
   right: 0;
   bottom: 0;
