--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
 <body>
 <div class="bg">
 <style>
+	@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) 
+and (orientation : portrait)
+{ 
 * {
   box-sizing: border-box;
 }
 
 #myVideo {
-background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+
   position: fixed;
   right: 0;
   bottom: 0;
   width: 100%; 
   height: 100%;
 }
+	}
 
 </style>
 </head>
